force-app/main/default/objects/Student__c/fields/Total_Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Total_Enrollments__c</fullName>
    <description>Count of Enrollment records</description>
    <inlineHelpText>Count of Enrollment records</inlineHelpText>
    <label>Total Enrollments</label>
    <summaryForeignKey>Enrollment__c.Student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>